<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_baseline_sports_basketball_24"
            android:title="@string/game"/>
        <item
            android:id="@+id/nav_creategame"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/connectto_game"/>
        <item
            android:id="@+id/nav_game_status"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/game_stats"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_baseline_recent_actors_24"
            android:title="@string/register"/>
        <item
            android:id="@+id/nav_norobot"
            android:visible="false" />
        <item
            android:id="@+id/nav_deleteuser"
            android:icon="@drawable/baseline_delete_24"
            android:title="@string/delete_user"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/videos"/>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_toc_24"
            android:title="@string/chat"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_app_settings_alt_24"
            android:title="@string/options"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_toc_24"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_conversation"
            android:visible="false" />
    </group>
</menu>