<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_start">

    <TextView
        android:id="@+id/software_version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="10dip"
        android:text="@string/software_version_title"/>
    <TextView
        android:id="@+id/software_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/software_version_title"
        android:text="@string/software_version"
        android:layout_margin="10dip"/>

    <TextView
        android:id="@+id/credits_software_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/software_version"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="10dip"
        android:text="@string/credits_software_title"/>
    <TextView
        android:id="@+id/credits_software_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/credits_software_title"
        android:text="@string/credits_software_content"
        android:layout_margin="10dip"/>
    <Button
        android:id="@+id/credits_software_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_margin="10dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/credits_software_content"
        android:text="@string/credits_software_button"/>

    <TextView
        android:id="@+id/credits_graphics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/credits_software_button"
        android:layout_margin="10dip"
        android:text="@string/credits_graphics_title"/>
    <TextView
        android:id="@+id/credits_graphics_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/credits_graphics_title"
        android:text="@string/credits_graphics_content"
        android:layout_margin="10dip"/>
    <Button
        android:id="@+id/credits_graphics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_margin="10dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/credits_graphics_content"
        android:text="@string/credits_graphics_button"/>

    <TextView
        android:id="@+id/credits_othercontributions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/credits_graphics_button"
        android:layout_margin="10dip"
        android:text="@string/credits_othercontributions_title"/>
    <TextView
        android:id="@+id/credits_othercontributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/credits_othercontributions_title"
        android:text="@string/credits_othercontributions"
        android:layout_margin="10dip"/>

    <TextView
        android:id="@+id/credits_tools_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/credits_othercontributions"
        android:layout_margin="10dip"
        android:text="@string/credits_tools_title"/>
    <TextView
        android:id="@+id/credits_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_below="@+id/credits_tools_title"
        android:text="@string/credits_tools"
        android:layout_margin="10dip"/>

</RelativeLayout>