<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:background="@drawable/background"
    android:tag="phone horizontal">

    <com.planes.android.game.multiplayer.PlanesVerticalLayoutMultiplayer
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/planes_layout">
        <com.planes.android.game.multiplayer.GameBoardMultiplayer
            android:id="@+id/game_boards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Buttons for board editing stage -->
        <com.planes.android.game.common.RotateButton
            android:id="@+id/rotate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="1"
            app:gc_col="1"
            app:gc_game_stage="1"/>
        <com.planes.android.customviews.TextButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="1"
            app:gc_col="2"
            app:gc_game_stage="1"
            app:gc_text="@string/done_button" />
        <com.planes.android.customviews.TextButton
            android:id="@+id/cancel_boardediting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="2"
            app:gc_col="1"
            app:gc_game_stage="1"
            app:gc_text="@string/cancel" />
        <ProgressBar
            android:id="@+id/ProgressBarBoardEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:gc_row="2"
            app:gc_col="2"
            app:gc_game_stage="1" />

        <!-- Buttons for game stage -->

        <com.planes.android.customviews.TwoLineTextButton
            android:id="@+id/stats_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_text1 = "@string/game_stats1"
            app:gc_text2="@string/game_stats2"
            app:gc_row="1"
            app:gc_col="1"
            app:gc_game_stage="2"
            app:gc_background_color="@color/orange"/>
        <com.planes.android.customviews.TwoLineTextButtonWithState
            android:id="@+id/view_opponent_board1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_text1="@string/view_opponent_board1"
            app:gc_text2="@string/view_opponent_board2"
            app:gc_row="2"
            app:gc_col="1"
            app:gc_game_stage="2" />
        <com.planes.android.customviews.TextButton
            android:id="@+id/cancel_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_text="@string/cancel"
            app:gc_row="1"
            app:gc_col="2"
            app:gc_game_stage="2"
            app:gc_background_color="@color/orange"/>
        <ProgressBar
            android:id="@+id/ProgressBarGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:gc_row="2"
            app:gc_col="2"
            app:gc_game_stage="1" />

        <!-- Buttons for start new game stage -->
        <com.planes.android.customviews.TwoLineTextButtonWithState
            android:id="@+id/view_opponent_board2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_text1="@string/view_opponent_board1"
            app:gc_text2="@string/view_opponent_board2"
            app:gc_row="1"
            app:gc_col="1"
            app:gc_rowspan="2"
            app:gc_colspan="3"
            app:gc_game_stage="0" />
        <com.planes.android.customviews.TwoLineTextButton
            android:id="@+id/start_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_text1="@string/start_new_game1"
            app:gc_text2="@string/start_new_game2"
            app:gc_row="3"
            app:gc_col="1"
            app:gc_rowspan="2"
            app:gc_colspan="3"
            app:gc_game_stage="0" />

        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/winner_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="1"
            app:gc_col="4"
            app:gc_colspan="5"
            app:gc_game_stage="0"
            app:gc_text="@string/opponent_winner"/>

        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/opponent_wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="2"
            app:gc_col="4"
            app:gc_colspan="4"
            app:gc_game_stage="0"
            app:gc_text="@string/opponent_wins" />
        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/opponent_wins_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="2"
            app:gc_col="8"
            app:gc_game_stage="0"
            app:gc_text="0" />
        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/player_wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="3"
            app:gc_col="4"
            app:gc_colspan="4"
            app:gc_game_stage="0"
            app:gc_text="@string/player_wins" />
        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/player_wins_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="3"
            app:gc_col="8"
            app:gc_game_stage="0"
            app:gc_text="0" />
        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/draws_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="4"
            app:gc_col="4"
            app:gc_colspan="4"
            app:gc_game_stage="0"
            app:gc_text="@string/draws" />
        <com.planes.android.customviews.ColouredSurfaceWithText
            android:id="@+id/draws_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:gc_row="4"
            app:gc_col="8"
            app:gc_game_stage="0"
            app:gc_text="0" />
    </com.planes.android.game.multiplayer.PlanesVerticalLayoutMultiplayer>
</LinearLayout>