<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="226dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/version_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleplayergame"
        style="@style/NavigationTextViewStyle"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/user_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouser"
        style="@style/NavigationTextViewStyle"
        android:paddingTop="10dp"/>

</LinearLayout>