<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_start">

    <TextView
        android:id="@+id/creategame_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:textSize="20dp"
        style="@style/CustomTextViewStyle"
        android:textStyle="bold"
        android:text="@string/create_game"/>
    <TextView
        android:id="@+id/creategame_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text = "@string/creategame_possible"
        style="@style/CustomTextViewStyle"
        android:layout_below="@+id/creategame_title"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/createnewgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dip"
        android:text="@string/create_new_game"
        style="@style/ButtonColor"
        android:layout_below="@+id/creategame_text" />

    <Button
        android:id="@+id/creategame_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_margin="10dip"
        android:text="@string/cancel"
        style="@style/ButtonColor"
        android:layout_below="@+id/creategame_text"
        android:layout_toLeftOf="@+id/createnewgame_button" />

</RelativeLayout>